--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Stylish Portfolio - Start Bootstrap Template</title>
+  <title>Big Chat Room</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -212,21 +212,21 @@
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
           <a class="social-link rounded-circle text-white mr-3" href="#!">
-            <i class="icon-social-facebook"></i>
+            <i class="fa fa-gift" aria-hidden="true"></i>
           </a>
         </li>
         <li class="list-inline-item">
           <a class="social-link rounded-circle text-white mr-3" href="#!">
-            <i class="icon-social-twitter"></i>
+            <i class="fa fa-home" aria-hidden="true"></i>
           </a>
         </li>
         <li class="list-inline-item">
           <a class="social-link rounded-circle text-white" href="#!">
-            <i class="icon-social-github"></i>
+            <i class="fa fa-gamepad" aria-hidden="true"></i>
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">Copyright &copy; Your Website 2020</p>
+      <p class="text-muted small mb-0">Copyright &copy; BCR 2020</p>
     </div>
   </footer>
 
