--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Big Chat Room</title>
+  <title>چت روم آزادی</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="js-scroll-trigger" href="#page-top">چت روم آزادی</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#page-top">Home</a>
@@ -55,7 +55,7 @@
   <!-- Header -->
   <header class="masthead d-flex">
     <div class="container text-center my-auto">
-      <h1 class="mb-1">Stylish Portfolio</h1>
+      <h1 class="mb-1">چت روم آزادی</h1>
       <h3 class="mb-5">
         <em>A Free Bootstrap Theme by Start Bootstrap</em>
       </h3>
@@ -204,7 +204,8 @@
   </section>
 
   <!-- Map -->
-  <div class="arena-chat" data-publisher="ezrabro" data-chatroom="gmo3" data-position="in-page"></div><script async src="https://go.arena.im/public/js/arenachatlib.js?p=ezrabro&e=gmo3"></script>
+  <section class="content-section" id="contact">
+    <div class="arena-chat" data-publisher="ezrabro" data-chatroom="gmo3" data-position="in-page"></div><script async src="https://go.arena.im/public/js/arenachatlib.js?p=ezrabro&e=gmo3"></script>
 
   <!-- Footer -->
   <footer class="footer text-center">
@@ -226,7 +227,7 @@
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">Copyright &copy; BCR 2020</p>
+      <p class="text-muted small mb-0">Copyright &copy; ACR 2020</p>
     </div>
   </footer>
 
