--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <title>چت روم آزادی</title>
 
   <!-- Bootstrap Core CSS -->
+  <link rel='manifest' href='ezrabro.github.io/acr/manifest.json'>
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom Fonts -->
